--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       right:45%;
       top:150px;
       position:fixed;
-      font-size:200px;
       color:white;
+        width:300px;
     }
     </style>
 
